parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> outer_block
Rule 1     outer_block -> funcDefMult block
Rule 2     funcDefMult -> <empty>
Rule 3     funcDefMult -> funcDef funcDefMult
Rule 4     funcDef -> FUN VARIABLE LEFT_PARENTHESIS varList RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
Rule 5     funcDef -> FUN VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
Rule 6     varList -> VARIABLE
Rule 7     varList -> VARIABLE COMMA varList
Rule 8     prop -> prop_BS LEFT_PARENTHESIS propList RIGHT_PARENTHESIS
Rule 9     prop -> prop_BS LEFT_PARENTHESIS RIGHT_PARENTHESIS
Rule 10    propList -> prop
Rule 11    propList -> prop COMMA propList
Rule 12    block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE
Rule 13    block_contents -> <empty>
Rule 14    block_contents -> stat block_contents
Rule 15    stat -> VARIABLE EQUALS prop SEMICOLON
Rule 16    stat -> prop_BS LEFT_BRACKET prop RIGHT_BRACKET EQUALS prop SEMICOLON
Rule 17    stat -> PRINT LEFT_PARENTHESIS prop RIGHT_PARENTHESIS SEMICOLON
Rule 18    stat -> WHILE LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block
Rule 19    stat -> IF LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block ELSE block
Rule 20    stat -> IF LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block
Rule 21    prop -> prop PLUS prop
Rule 22    prop -> prop MINUS prop
Rule 23    prop -> prop TIMES prop
Rule 24    prop -> prop RAISED_TO_POWER_OF prop
Rule 25    prop -> prop DIVIDE prop
Rule 26    prop -> prop INT_DIVIDE prop
Rule 27    prop -> prop MOD prop
Rule 28    prop -> prop IN prop
Rule 29    prop -> prop LESS_THAN prop
Rule 30    prop -> prop LESS_THAN_EQUAL_TO prop
Rule 31    prop -> prop EQUAL_TO prop
Rule 32    prop -> prop NOT_EQUAL_TO prop
Rule 33    prop -> prop GREATER_THAN_EQUAL_TO prop
Rule 34    prop -> prop GREATER_THAN prop
Rule 35    prop -> prop CONS prop
Rule 36    prop -> NEGATION prop
Rule 37    prop -> prop CONJUNCTION prop
Rule 38    prop -> prop DISJUNCTION prop
Rule 39    prop -> LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
Rule 40    prop_BS -> VARIABLE
Rule 41    prop -> TRUE
Rule 42    prop -> FALSE
Rule 43    prop -> INTEGER
Rule 44    prop -> MINUS INTEGER
Rule 45    prop -> REAL
Rule 46    prop -> STRING
Rule 47    prop_BS -> LEFT_BRACKET prop_contents RIGHT_BRACKET
Rule 48    prop_BS -> LEFT_BRACKET RIGHT_BRACKET
Rule 49    prop_contents -> prop
Rule 50    prop_contents -> prop COMMA prop_contents
Rule 51    prop -> prop_BS bracket_prop_content
Rule 52    bracket_prop_content -> LEFT_BRACKET prop RIGHT_BRACKET
Rule 53    bracket_prop_content -> LEFT_BRACKET prop RIGHT_BRACKET bracket_prop_content
Rule 54    prop -> prop_BS
Rule 55    prop -> LEFT_PARENTHESIS prop COMMA prop_tup_contents RIGHT_PARENTHESIS
Rule 56    prop -> LEFT_PARENTHESIS prop COMMA RIGHT_PARENTHESIS
Rule 57    prop_tup_contents -> prop
Rule 58    prop_tup_contents -> prop COMMA prop_tup_contents
Rule 59    prop -> HASHTAG prop prop

Terminals, with rules where they appear

COMMA                : 7 11 50 55 56 58
CONJUNCTION          : 37
CONS                 : 35
DISJUNCTION          : 38
DIVIDE               : 25
ELSE                 : 19
EQUALS               : 4 5 15 16
EQUAL_TO             : 31
FALSE                : 42
FUN                  : 4 5
GREATER_THAN         : 34
GREATER_THAN_EQUAL_TO : 33
HASHTAG              : 59
IF                   : 19 20
IN                   : 28
INTEGER              : 43 44
INT_DIVIDE           : 26
LEFT_BRACKET         : 16 47 48 52 53
LEFT_CURLY_BRACE     : 12
LEFT_PARENTHESIS     : 4 5 8 9 17 18 19 20 39 55 56
LESS_THAN            : 29
LESS_THAN_EQUAL_TO   : 30
MINUS                : 22 44
MOD                  : 27
NEGATION             : 36
NOT_EQUAL_TO         : 32
PLUS                 : 21
PRINT                : 17
RAISED_TO_POWER_OF   : 24
REAL                 : 45
RIGHT_BRACKET        : 16 47 48 52 53
RIGHT_CURLY_BRACE    : 12
RIGHT_PARENTHESIS    : 4 5 8 9 17 18 19 20 39 55 56
SEMICOLON            : 4 5 15 16 17
STRING               : 46
TIMES                : 23
TRUE                 : 41
VARIABLE             : 4 5 6 7 15 40
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

block                : 1 4 5 18 19 19 20
block_contents       : 12 14
bracket_prop_content : 51 53
funcDef              : 3
funcDefMult          : 1 3
outer_block          : 0
prop                 : 4 5 10 11 15 16 16 17 18 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 37 38 38 39 49 50 52 53 55 56 57 58 59 59
propList             : 8 11
prop_BS              : 8 9 16 51 54
prop_contents        : 47 50
prop_tup_contents    : 55 58
stat                 : 14
varList              : 4 7

Parsing method: LALR

state 0

    (0) S' -> . outer_block
    (1) outer_block -> . funcDefMult block
    (2) funcDefMult -> .
    (3) funcDefMult -> . funcDef funcDefMult
    (4) funcDef -> . FUN VARIABLE LEFT_PARENTHESIS varList RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
    (5) funcDef -> . FUN VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS EQUALS block prop SEMICOLON

    LEFT_CURLY_BRACE reduce using rule 2 (funcDefMult -> .)
    FUN             shift and go to state 4

    outer_block                    shift and go to state 1
    funcDefMult                    shift and go to state 2
    funcDef                        shift and go to state 3

state 1

    (0) S' -> outer_block .



state 2

    (1) outer_block -> funcDefMult . block
    (12) block -> . LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE

    LEFT_CURLY_BRACE shift and go to state 6

    block                          shift and go to state 5

state 3

    (3) funcDefMult -> funcDef . funcDefMult
    (2) funcDefMult -> .
    (3) funcDefMult -> . funcDef funcDefMult
    (4) funcDef -> . FUN VARIABLE LEFT_PARENTHESIS varList RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
    (5) funcDef -> . FUN VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS EQUALS block prop SEMICOLON

    LEFT_CURLY_BRACE reduce using rule 2 (funcDefMult -> .)
    FUN             shift and go to state 4

    funcDef                        shift and go to state 3
    funcDefMult                    shift and go to state 7

state 4

    (4) funcDef -> FUN . VARIABLE LEFT_PARENTHESIS varList RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
    (5) funcDef -> FUN . VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS EQUALS block prop SEMICOLON

    VARIABLE        shift and go to state 8


state 5

    (1) outer_block -> funcDefMult block .

    $end            reduce using rule 1 (outer_block -> funcDefMult block .)


state 6

    (12) block -> LEFT_CURLY_BRACE . block_contents RIGHT_CURLY_BRACE
    (13) block_contents -> .
    (14) block_contents -> . stat block_contents
    (15) stat -> . VARIABLE EQUALS prop SEMICOLON
    (16) stat -> . prop_BS LEFT_BRACKET prop RIGHT_BRACKET EQUALS prop SEMICOLON
    (17) stat -> . PRINT LEFT_PARENTHESIS prop RIGHT_PARENTHESIS SEMICOLON
    (18) stat -> . WHILE LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block
    (19) stat -> . IF LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block ELSE block
    (20) stat -> . IF LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block
    (40) prop_BS -> . VARIABLE
    (47) prop_BS -> . LEFT_BRACKET prop_contents RIGHT_BRACKET
    (48) prop_BS -> . LEFT_BRACKET RIGHT_BRACKET

    RIGHT_CURLY_BRACE reduce using rule 13 (block_contents -> .)
    VARIABLE        shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 15
    IF              shift and go to state 16
    LEFT_BRACKET    shift and go to state 13

    block_contents                 shift and go to state 9
    stat                           shift and go to state 10
    prop_BS                        shift and go to state 12

state 7

    (3) funcDefMult -> funcDef funcDefMult .

    LEFT_CURLY_BRACE reduce using rule 3 (funcDefMult -> funcDef funcDefMult .)


state 8

    (4) funcDef -> FUN VARIABLE . LEFT_PARENTHESIS varList RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
    (5) funcDef -> FUN VARIABLE . LEFT_PARENTHESIS RIGHT_PARENTHESIS EQUALS block prop SEMICOLON

    LEFT_PARENTHESIS shift and go to state 17


state 9

    (12) block -> LEFT_CURLY_BRACE block_contents . RIGHT_CURLY_BRACE

    RIGHT_CURLY_BRACE shift and go to state 18


state 10

    (14) block_contents -> stat . block_contents
    (13) block_contents -> .
    (14) block_contents -> . stat block_contents
    (15) stat -> . VARIABLE EQUALS prop SEMICOLON
    (16) stat -> . prop_BS LEFT_BRACKET prop RIGHT_BRACKET EQUALS prop SEMICOLON
    (17) stat -> . PRINT LEFT_PARENTHESIS prop RIGHT_PARENTHESIS SEMICOLON
    (18) stat -> . WHILE LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block
    (19) stat -> . IF LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block ELSE block
    (20) stat -> . IF LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block
    (40) prop_BS -> . VARIABLE
    (47) prop_BS -> . LEFT_BRACKET prop_contents RIGHT_BRACKET
    (48) prop_BS -> . LEFT_BRACKET RIGHT_BRACKET

    RIGHT_CURLY_BRACE reduce using rule 13 (block_contents -> .)
    VARIABLE        shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 15
    IF              shift and go to state 16
    LEFT_BRACKET    shift and go to state 13

    stat                           shift and go to state 10
    block_contents                 shift and go to state 19
    prop_BS                        shift and go to state 12

state 11

    (15) stat -> VARIABLE . EQUALS prop SEMICOLON
    (40) prop_BS -> VARIABLE .

    EQUALS          shift and go to state 20
    LEFT_BRACKET    reduce using rule 40 (prop_BS -> VARIABLE .)


state 12

    (16) stat -> prop_BS . LEFT_BRACKET prop RIGHT_BRACKET EQUALS prop SEMICOLON

    LEFT_BRACKET    shift and go to state 21


state 13

    (47) prop_BS -> LEFT_BRACKET . prop_contents RIGHT_BRACKET
    (48) prop_BS -> LEFT_BRACKET . RIGHT_BRACKET
    (49) prop_contents -> . prop
    (50) prop_contents -> . prop COMMA prop_contents
    (8) prop -> . prop_BS LEFT_PARENTHESIS propList RIGHT_PARENTHESIS
    (9) prop -> . prop_BS LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (21) prop -> . prop PLUS prop
    (22) prop -> . prop MINUS prop
    (23) prop -> . prop TIMES prop
    (24) prop -> . prop RAISED_TO_POWER_OF prop
    (25) prop -> . prop DIVIDE prop
    (26) prop -> . prop INT_DIVIDE prop
    (27) prop -> . prop MOD prop
    (28) prop -> . prop IN prop
    (29) prop -> . prop LESS_THAN prop
    (30) prop -> . prop LESS_THAN_EQUAL_TO prop
    (31) prop -> . prop EQUAL_TO prop
    (32) prop -> . prop NOT_EQUAL_TO prop
    (33) prop -> . prop GREATER_THAN_EQUAL_TO prop
    (34) prop -> . prop GREATER_THAN prop
    (35) prop -> . prop CONS prop
    (36) prop -> . NEGATION prop
    (37) prop -> . prop CONJUNCTION prop
    (38) prop -> . prop DISJUNCTION prop
    (39) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (41) prop -> . TRUE
    (42) prop -> . FALSE
    (43) prop -> . INTEGER
    (44) prop -> . MINUS INTEGER
    (45) prop -> . REAL
    (46) prop -> . STRING
    (51) prop -> . prop_BS bracket_prop_content
    (54) prop -> . prop_BS
    (55) prop -> . LEFT_PARENTHESIS prop COMMA prop_tup_contents RIGHT_PARENTHESIS
    (56) prop -> . LEFT_PARENTHESIS prop COMMA RIGHT_PARENTHESIS
    (59) prop -> . HASHTAG prop prop
    (40) prop_BS -> . VARIABLE
    (47) prop_BS -> . LEFT_BRACKET prop_contents RIGHT_BRACKET
    (48) prop_BS -> . LEFT_BRACKET RIGHT_BRACKET

    RIGHT_BRACKET   shift and go to state 23
    NEGATION        shift and go to state 28
    LEFT_PARENTHESIS shift and go to state 26
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    INTEGER         shift and go to state 31
    MINUS           shift and go to state 27
    REAL            shift and go to state 32
    STRING          shift and go to state 33
    HASHTAG         shift and go to state 34
    VARIABLE        shift and go to state 35
    LEFT_BRACKET    shift and go to state 13

    prop_contents                  shift and go to state 22
    prop                           shift and go to state 24
    prop_BS                        shift and go to state 25

state 14

    (17) stat -> PRINT . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS SEMICOLON

    LEFT_PARENTHESIS shift and go to state 36


state 15

    (18) stat -> WHILE . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block

    LEFT_PARENTHESIS shift and go to state 37


state 16

    (19) stat -> IF . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block ELSE block
    (20) stat -> IF . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS block

    LEFT_PARENTHESIS shift and go to state 38


state 17

    (4) funcDef -> FUN VARIABLE LEFT_PARENTHESIS . varList RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
    (5) funcDef -> FUN VARIABLE LEFT_PARENTHESIS . RIGHT_PARENTHESIS EQUALS block prop SEMICOLON
    (6) varList -> . VARIABLE
    (7) varList -> . VARIABLE COMMA varList

    RIGHT_PARENTHESIS shift and go to state 41
    VARIABLE        shift and go to state 39

    varList                        shift and go to state 40

state 18

    (12) block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .

    $end            reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    NEGATION        reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    LEFT_PARENTHESIS reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    TRUE            reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    FALSE           reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    INTEGER         reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    MINUS           reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    REAL            reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    STRING          reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    HASHTAG         reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    VARIABLE        reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    LEFT_BRACKET    reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    PRINT           reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    WHILE           reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    IF              reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    RIGHT_CURLY_BRACE reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)
    ELSE            reduce using rule 12 (block -> LEFT_CURLY_BRACE block_contents RIGHT_CURLY_BRACE .)


state 19

    (14) block_contents -> stat block_contents .

    RIGHT_CURLY_BRACE reduce using rule 14 (block_contents -> stat block_contents .)


state 20

    (15) stat -> VARIABLE EQUALS . prop SEMICOLON
    (8) prop -> . prop_BS LEFT_PARENTHESIS propList RIGHT_PARENTHESIS
    (9) prop -> . prop_BS LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (21) prop -> . prop PLUS prop
    (22) prop -> . prop MINUS prop
    (23) prop -> . prop TIMES prop
    (24) prop -> . prop RAISED_TO_POWER_OF prop
    (25) prop -> . prop DIVIDE prop
    (26) prop -> . prop INT_DIVIDE prop
    (27) prop -> . prop MOD prop
    (28) prop -> . prop IN prop
    (29) prop -> . prop LESS_THAN prop
    (30) prop -> . prop LESS_THAN_EQUAL_TO prop
    (31) prop -> . prop EQUAL_TO prop
    (32) prop -> . prop NOT_EQUAL_TO prop
    (33) prop -> . prop GREATER_THAN_EQUAL_TO prop
    (34) prop -> . prop GREATER_THAN prop
    (35) prop -> . prop CONS prop
    (36) prop -> . NEGATION prop
    (37) prop -> . prop CONJUNCTION prop
    (38) prop -> . prop DISJUNCTION prop
    (39) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (41) prop -> . TRUE
    (42) prop -> . FALSE
    (43) prop -> . INTEGER
    (44) prop -> . MINUS INTEGER
    (45) prop -> . REAL
    (46) prop -> . STRING
    (51) prop -> . prop_BS bracket_prop_content
    (54) prop -> . prop_BS
    (55) prop -> . LEFT_PARENTHESIS prop COMMA prop_tup_contents RIGHT_PARENTHESIS
    (56) prop -> . LEFT_PARENTHESIS prop COMMA RIGHT_PARENTHESIS
    (59) prop -> . HASHTAG prop prop
    (40) prop_BS -> . VARIABLE
    (47) prop_BS -> . LEFT_BRACKET prop_contents RIGHT_BRACKET
    (48) prop_BS -> . LEFT_BRACKET RIGHT_BRACKET

    NEGATION        shift and go to state 28
    LEFT_PARENTHESIS shift and go to state 26
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    INTEGER         shift and go to state 31
    MINUS           shift and go to state 27
    REAL            shift and go to state 32
    STRING          shift and go to state 33
    HASHTAG         shift and go to state 34
    VARIABLE        shift and go to state 35
    LEFT_BRACKET    shift and go to state 13

    prop                           shift and go to state 42
    prop_BS                        shift and go to state 25

state 21

    (16) stat -> prop_BS LEFT_BRACKET . prop RIGHT_BRACKET EQUALS prop SEMICOLON
    (8) prop -> . prop_BS LEFT_PARENTHESIS propList RIGHT_PARENTHESIS
    (9) prop -> . prop_BS LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (21) prop -> . prop PLUS prop
    (22) prop -> . prop MINUS prop
    (23) prop -> . prop TIMES prop
    (24) prop -> . prop RAISED_TO_POWER_OF prop
    (25) prop -> . prop DIVIDE prop
    (26) prop -> . prop INT_DIVIDE prop
    (27) prop -> . prop MOD prop
    (28) prop -> . prop IN prop
    (29) prop -> . prop LESS_THAN prop
    (30) prop -> . prop LESS_THAN_EQUAL_TO prop
    (31) prop -> . prop EQUAL_TO prop
    (32) prop -> . prop NOT_EQUAL_TO prop
    (33) prop -> . prop GREATER_THAN_EQUAL_TO prop
    (34) prop -> . prop GREATER_THAN prop
    (35) prop -> . prop CONS prop
    (36) prop -> . NEGATION prop
    (37) prop -> . prop CONJUNCTION prop
    (38) prop -> . prop DISJUNCTION prop
    (39) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (41) prop -> . TRUE
    (42) prop -> . FALSE
    (43) prop -> . INTEGER
    (44) prop -> . MINUS INTEGER
    (45) prop -> . REAL
    (46) prop -> . STRING
    (51) prop -> . prop_BS bracket_prop_content
    (54) prop -> . prop_BS
    (55) prop -> . LEFT_PARENTHESIS prop COMMA prop_tup_contents RIGHT_PARENTHESIS
    (56) prop -> . LEFT_PARENTHESIS prop COMMA RIGHT_PARENTHESIS
    (59) prop -> . HASHTAG prop prop
    (40) prop_BS -> . VARIABLE
    (47) prop_BS -> . LEFT_BRACKET prop_contents RIGHT_BRACKET
    (48) prop_BS -> . LEFT_BRACKET RIGHT_BRACKET

    NEGATION        shift and go to state 28
    LEFT_PARENTHESIS shift and go to state 26
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    INTEGER         shift and go to state 31
    MINUS           shift and go to state 27
    REAL            shift and go to state 32
    STRING          shift and go to state 33
    HASHTAG         shift and go to state 34
    VARIABLE        shift and go to state 35
    LEFT_BRACKET    shift and go to state 13

    prop_BS                        shift and go to state 25
    prop                           shift and go to state 43

state 22

    (47) prop_BS -> LEFT_BRACKET prop_contents . RIGHT_BRACKET

    RIGHT_BRACKET   shift and go to state 44


state 23

    (48) prop_BS -> LEFT_BRACKET RIGHT_BRACKET .

    LEFT_BRACKET    reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    LEFT_PARENTHESIS reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    COMMA           reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    PLUS            reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    MINUS           reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    TIMES           reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    RAISED_TO_POWER_OF reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    DIVIDE          reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    INT_DIVIDE      reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    MOD             reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    IN              reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    LESS_THAN       reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    LESS_THAN_EQUAL_TO reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    EQUAL_TO        reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    NOT_EQUAL_TO    reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    GREATER_THAN_EQUAL_TO reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    GREATER_THAN    reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    CONS            reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    CONJUNCTION     reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    DISJUNCTION     reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    RIGHT_BRACKET   reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    SEMICOLON       reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    RIGHT_PARENTHESIS reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    NEGATION        reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    TRUE            reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    FALSE           reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    INTEGER         reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    REAL            reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    STRING          reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    HASHTAG         reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)
    VARIABLE        reduce using rule 48 (prop_BS -> LEFT_BRACKET RIGHT_BRACKET .)


state 24

    (49) prop_contents -> prop .
    (50) prop_contents -> prop . COMMA prop_contents
    (21) prop -> prop . PLUS prop
    (22) prop -> prop . MINUS prop
    (23) prop -> prop . TIMES prop
    (24) prop -> prop . RAISED_TO_POWER_OF prop
    (25) prop -> prop . DIVIDE prop
    (26) prop -> prop . INT_DIVIDE prop
    (27) prop -> prop . MOD prop
    (28) prop -> prop . IN prop
    (29) prop -> prop . LESS_THAN prop
    (30) prop -> prop . LESS_THAN_EQUAL_TO prop
    (31) prop -> prop . EQUAL_TO prop
    (32) prop -> prop . NOT_EQUAL_TO prop
    (33) prop -> prop . GREATER_THAN_EQUAL_TO prop
    (34) prop -> prop . GREATER_THAN prop
    (35) prop -> prop . CONS prop
    (37) prop -> prop . CONJUNCTION prop
    (38) prop -> prop . DISJUNCTION prop

    RIGHT_BRACKET   reduce using rule 49 (prop_contents -> prop .)
    COMMA           shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    RAISED_TO_POWER_OF shift and go to state 49
    DIVIDE          shift and go to state 50
    INT_DIVIDE      shift and go to state 51
    MOD             shift and go to state 52
    IN              shift and go to state 53
    LESS_THAN       shift and go to state 54
    LESS_THAN_EQUAL_TO shift and go to state 55
    EQUAL_TO        shift and go to state 56
    NOT_EQUAL_TO    shift and go to state 57
    GREATER_THAN_EQUAL_TO shift and go to state 58
    GREATER_THAN    shift and go to state 59
    CONS            shift and go to state 60
    CONJUNCTION     shift and go to state 61
    DISJUNCTION     shift and go to state 62


state 25

    (8) prop -> prop_BS . LEFT_PARENTHESIS propList RIGHT_PARENTHESIS
    (9) prop -> prop_BS . LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (51) prop -> prop_BS . bracket_prop_content
    (54) prop -> prop_BS .
    (52) bracket_prop_content -> . LEFT_BRACKET prop RIGHT_BRACKET
    (53) bracket_prop_content -> . LEFT_BRACKET prop RIGHT_BRACKET bracket_prop_content

  ! shift/reduce conflict for LEFT_PARENTHESIS resolved as shift
  ! shift/reduce conflict for LEFT_BRACKET resolved as shift
    LEFT_PARENTHESIS shift and go to state 63
    COMMA           reduce using rule 54 (prop -> prop_BS .)
    PLUS            reduce using rule 54 (prop -> prop_BS .)
    MINUS           reduce using rule 54 (prop -> prop_BS .)
    TIMES           reduce using rule 54 (prop -> prop_BS .)
    RAISED_TO_POWER_OF reduce using rule 54 (prop -> prop_BS .)
    DIVIDE          reduce using rule 54 (prop -> prop_BS .)
    INT_DIVIDE      reduce using rule 54 (prop -> prop_BS .)
    MOD             reduce using rule 54 (prop -> prop_BS .)
    IN              reduce using rule 54 (prop -> prop_BS .)
    LESS_THAN       reduce using rule 54 (prop -> prop_BS .)
    LESS_THAN_EQUAL_TO reduce using rule 54 (prop -> prop_BS .)
    EQUAL_TO        reduce using rule 54 (prop -> prop_BS .)
    NOT_EQUAL_TO    reduce using rule 54 (prop -> prop_BS .)
    GREATER_THAN_EQUAL_TO reduce using rule 54 (prop -> prop_BS .)
    GREATER_THAN    reduce using rule 54 (prop -> prop_BS .)
    CONS            reduce using rule 54 (prop -> prop_BS .)
    CONJUNCTION     reduce using rule 54 (prop -> prop_BS .)
    DISJUNCTION     reduce using rule 54 (prop -> prop_BS .)
    RIGHT_BRACKET   reduce using rule 54 (prop -> prop_BS .)
    SEMICOLON       reduce using rule 54 (prop -> prop_BS .)
    RIGHT_PARENTHESIS reduce using rule 54 (prop -> prop_BS .)
    NEGATION        reduce using rule 54 (prop -> prop_BS .)
    TRUE            reduce using rule 54 (prop -> prop_BS .)
    FALSE           reduce using rule 54 (prop -> prop_BS .)
    INTEGER         reduce using rule 54 (prop -> prop_BS .)
    REAL            reduce using rule 54 (prop -> prop_BS .)
    STRING          reduce using rule 54 (prop -> prop_BS .)
    HASHTAG         reduce using rule 54 (prop -> prop_BS .)
    VARIABLE        reduce using rule 54 (prop -> prop_BS .)
    LEFT_BRACKET    shift and go to state 65

  ! LEFT_PARENTHESIS [ reduce using rule 54 (prop -> prop_BS .) ]
  ! LEFT_BRACKET    [ reduce using rule 54 (prop -> prop_BS .) ]

    bracket_prop_content           shift and go to state 64

state 26

    (39) prop -> LEFT_PARENTHESIS . prop RIGHT_PARENTHESIS
    (55) prop -> LEFT_PARENTHESIS . prop COMMA prop_tup_contents RIGHT_PARENTHESIS
    (56) prop -> LEFT_PARENTHESIS . prop COMMA RIGHT_PARENTHESIS
    (8) prop -> . prop_BS LEFT_PARENTHESIS propList RIGHT_PARENTHESIS
    (9) prop -> . prop_BS LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (21) prop -> . prop PLUS prop
    (22) prop -> . prop MINUS prop
    (23) prop -> . prop TIMES prop
    (24) prop -> . prop RAISED_TO_POWER_OF prop
    (25) prop -> . prop DIVIDE prop
    (26) prop -> . prop INT_DIVIDE prop
    (27) prop -> . prop MOD prop
    (28) prop -> . prop IN prop
    (29) prop -> . prop LESS_THAN prop
    (30) prop -> . prop LESS_THAN_EQUAL_TO prop
    (31) prop -> . prop EQUAL_TO prop
    (32) prop -> . prop NOT_EQUAL_TO prop
    (33) prop -> . prop GREATER_THAN_EQUAL_TO prop
    (34) prop -> . prop GREATER_THAN prop
    (35) prop -> . prop CONS prop
    (36) prop -> . NEGATION prop
    (37) prop -> . prop CONJUNCTION prop
    (38) prop -> . prop DISJUNCTION prop
    (39) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (41) prop -> . TRUE
    (42) prop -> . FALSE
    (43) prop -> . INTEGER
    (44) prop -> . MINUS INTEGER
    (45) prop -> . REAL
    (46) prop -> . STRING
    (51) prop -> . prop_BS bracket_prop_content
    (54) prop -> . prop_BS
    (55) prop -> . LEFT_PARENTHESIS prop COMMA prop_tup_contents RIGHT_PARENTHESIS
    (56) prop -> . LEFT_PARENTHESIS prop COMMA RIGHT_PARENTHESIS
    (59) prop -> . HASHTAG prop prop
    (40) prop_BS -> . VARIABLE
    (47) prop_BS -> . LEFT_BRACKET prop_contents RIGHT_BRACKET
    (48) prop_BS -> . LEFT_BRACKET RIGHT_BRACKET
